--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: 'Comic Sans MS', 'Poppins', sans-serif;
-  background: linear-gradient(to bottom, #FCE4EC, #FFF8E1);
+  background:(bottom,#FCE4EC,#FFF8E1);
   color: #4b3b6b;
   display: flex;
   flex-direction: column;
