--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .header {
-  background-image: url('https://github.com/radhpkk/intervensi-web/blob/main/istock.jpg?raw=true');
+  background-image: url('https://github.com/radhpkk/intervensi-web/blob/main/siemens.png?raw=true');
   background-size: cover;
   background-position: center;
   height: 350px;
