--- a/penjagaan.css
+++ b/penjagaan.css
@@ -42,3 +42,8 @@ h1 {
   margin-bottom: 10px;
   line-height: 1.6;
 }
+.light-blue {
+  background-color: #e6f2ff; 
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 30px
