--- a/neuro.css
+++ b/neuro.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header {
-  background-image: url('https://github.com/radhpkk/intervensi-web/blob/main/siemens.png?raw=true');
+  background-image: url(https://github.com/radhpkk/intervensi-web/blob/main/neuro.png?raw=true);
   background-size: cover;
   background-position: center;
   height: 100vh;
