--- a/style.css
+++ b/style.css
@@ -126,17 +126,18 @@ body {
   transform: translateY(-5px);
 }
 
-footer a {
-  color: #4b3b6b;
-  text-decoration: none;
-}
-
 footer {
   background-color: #E3D0FF;
   text-align: center;
-  padding: 15px;
+  padding: 20px;
   font-size: 1rem;
   color: #4b3b6b;
+  margin-top: auto;
+}
+
+footer a {
+  color: #4b3b6b;
+  text-decoration: none;
 }
 
 footer a:hover {
