--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
   flex: 1;
   padding: 40px 20px;
   max-width: 850px;
-  margin: 20px auto;
+  margin: 40px 0 auto;
   background-color: #ffffffdd;
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
