--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
   bottom: 0;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
-  align-items: flex-start; /* align to top */
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between; 
   text-align: center;
   color: white;
   padding: 60px 20px 20px 20px;
@@ -166,7 +166,6 @@ footer,
   padding: 15px 10px;
   font-size: 1rem;
   color: #4b3b6b;
-  margin-top: auto;
   width: 100%;
 }
 
